BuildHughes/translation-tool/inputs/source_meta/objects/Order_Limit_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer/Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Address__c</fullName>
        <label>Install Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Limit_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Limit Audit</label>
    <nameField>
        <displayFormat>OLA({00000000})</displayFormat>
        <label>Order Limit Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Limit Audits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>